--- a/TaskBot.IoC/TaskBot.IoC.csproj
+++ b/TaskBot.IoC/TaskBot.IoC.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Discord.Net.Commands" Version="3.13.0" />
+      <PackageReference Include="Discord.Net.Core" Version="3.13.0" />
+      <PackageReference Include="Discord.Net.WebSocket" Version="3.13.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
